--- a/frontend/login.html
+++ b/frontend/login.html
@@ -187,7 +187,7 @@
             <form>
 
             <input type="text" class="v1_39" id="user_id">
-            <input type="passward" class="v1_40" id="user_pw">
+            <input type="password" class="v1_40" id="user_pw">
             <input type="submit" class="v1_43" value="LOG IN">
             
             </form>
