myprofile.html and edit.html

--- a/frontend/myprofile.html
+++ b/frontend/myprofile.html
@@ -46,7 +46,7 @@
             color: rgba(0, 0, 0, 1);
             position: absolute;
             top: 33px;
-            left: 994px;
+            left: 1010px;
             font-family: Inter;
             font-weight: Regular;
             font-size: 32px;
@@ -218,7 +218,7 @@
     <div class="v10_1051">
         <div class="nav">
             <a href="#" class="v10_1053">GitRank</a>
-            <a href="myprofile.html" class="v10_1054">My profile</a>
+            <a href="edit.html" class="v10_1054">Edit</a>
             <a href="signin.html" class="v10_1055">Sign out</a>
         </div>
         <div class="container">
