--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -14,7 +14,7 @@
         </div>
         <div class="container">
             <div class="image">
-                <img src="image/github.png" class="img">
+                <img src="image/github.png" class="img" id="my_img">
             </div>
             <div class="data">
                 <table>
@@ -36,7 +36,7 @@
                 </table>
                 <fieldset style="height: 225px">
                     <legend style="font-size:18px; font-family: Inter;">Comment</legend>
-                    <textarea id="comment" cols="60" rows="10"></textarea>
+                    <textarea id="comment" cols="75" rows="10"></textarea>
                 </fieldset>
             </div>
         </div>
