--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -223,7 +223,7 @@
         </div>
         <div class="container">
             <div class="image">
-                <img src="image/github.png" class="img">
+                <img src="image/github.png" class="img" id="user_img">
             </div>
             <div class="data">
                 <table>
