--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -9,7 +9,7 @@
     <div class="v10_1288">
         <div class="name">
             <a href="#" class="v10_1290">GitRank</a>
-            <a href="myprofile.html" class="v10_1291">Done</a>
+            <button class="v10_1291" id="done">Done</button>
             <a href="signin.html" class="v10_1292">Sign out</a>
         </div>
         <div class="container">
@@ -89,7 +89,7 @@
     }
 
     .v10_1291 {
-        width: 80px;
+        width: 100px;
         color: rgba(0, 0, 0, 1);
         position: absolute;
         top: 33px;
@@ -100,7 +100,10 @@
         opacity: 1;
         text-align: left;
         text-decoration: none;
+        background-color: #fff;
+        border: 0;
     }
+
 
     .v10_1292 {
         width: 125px;
