--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -202,8 +202,8 @@
     </div>
     <form>
 
-      <input type="text" class="v1_39" id="user_id">
-      <input type="password" class="v1_40" id="user_pw">
+      <input type="text" class="v1_39" id="user_id" name="id">
+      <input type="password" class="v1_40" id="user_pw" name="pw">
       <button type="submit" class="v1_43" id="login">LOG IN</button>
 
     </form>
