--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -7,45 +7,49 @@
 
 <body>
     <div class="v10_1288">
-        <div class="name">
-            <a href="#" class="v10_1290">GitRank</a>
-            <button class="v10_1291" id="done">Done</button>
-            <a href="signin.html" class="v10_1292">Sign out</a>
-        </div>
-        <div class="container">
-            <div class="image">
-                <img src="image/github.png" class="img" id="my_img">
+        <form action="" method="get">
+            <input type="text" class="v10_1308" id="my_github" name="github">
+            <input type="text" class="v10_1331" id="my_interests" name="interests">
+            <input type="text" class="v10_1332" id="my_contact" name="contact">
+            <div class="name">
+                <a href="#" class="v10_1290">GitRank</a>
+                <button type="submit" class="v10_1291" id="done" onclick="alert('Done')">Done</button>
+                <a href="signin.html" class="v10_1292">Sign out</a>
             </div>
-            <div class="data">
-                <table>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Github</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Interests</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Contact</p>
-                        </td>
-                    </tr>
-                </table>
-                <fieldset style="height: 225px">
-                    <legend style="font-size:18px; font-family: Inter;">Comment</legend>
-                    <textarea id="comment" cols="75" rows="10"></textarea>
-                </fieldset>
+
+            <div class="container">
+                <div class="image">
+                    <img src="image/github.png" class="img" id="my_img">
+                </div>
+
+                <div class="data">
+                    <table>
+                        <tr>
+                            <td style="width:120px">
+                                <p>Github</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="width:120px">
+                                <p>Interests</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="width:120px">
+                                <p>Contact</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <fieldset style="height: 225px">
+                        <legend style="font-size:18px; font-family: Inter;">Comment</legend>
+                        <textarea id="comment" cols="75" rows="10" name="comment"></textarea>
+                    </fieldset>
+                </div>
             </div>
-        </div>
-        <button class="v10_1306" id="image_upload">
-            Upload
-        </button>
-        <input type="text" class="v10_1308" id="my_github">
-        <input type="text" class="v10_1331" id="my_interests">
-        <input type="text" class="v10_1332" id="my_contact">
+            <button class="v10_1306" id="image_upload">
+                Upload
+            </button>
+        </form>
     </div>
 </body>
 
@@ -161,6 +165,7 @@
         left: 755px;
         border: 1px solid rgba(255, 140, 0, 1);
         overflow: hidden;
+        z-index: 2;
     }
 
     .v10_1331 {
@@ -173,6 +178,7 @@
         left: 755px;
         border: 1px solid rgba(255, 140, 0, 1);
         overflow: hidden;
+        z-index: 2;
     }
 
     .v10_1332 {
@@ -185,6 +191,7 @@
         left: 755px;
         border: 1px solid rgba(255, 140, 0, 1);
         overflow: hidden;
+        z-index: 2;
     }
 
     .container {
