--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -12,7 +12,7 @@
             <input type="text" class="v10_1331" id="my_interests" name="interests">
             <input type="text" class="v10_1332" id="my_contact" name="contact">
             <div class="name">
-                <a href="#" class="v10_1290">GitRank</a>
+                <a href="rank.html" class="v10_1290">GitRank</a>
                 <button type="submit" class="v10_1291" id="done" onclick="alert('Done')">Done</button>
                 <a href="signin.html" class="v10_1292">Sign out</a>
             </div>
