--- a/frontend/rank.html
+++ b/frontend/rank.html
@@ -25,8 +25,8 @@
         <div class="container">
             <a class="navbar-brand" style="font-weight:bold; font-size:1.5rem" href="#">GitRank</a>
             <form class="d-flex">
-                <a class="nav-link me-2" href="#">My profile</a>
-                <a class="nav-link ms-2" href="#">Sign Out</a>
+                <a class="nav-link me-2" href="myprofile.html">My profile</a>
+                <a class="nav-link ms-2" href="signin.html">Sign Out</a>
             </form>
         </div>
     </nav>
