--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -211,7 +211,7 @@
     <span class="v1_45">PW :</span>
     <span class="v1_49">GitRank</span>
     <span class="v1_50">Don’t have an account?</span>
-    <a href="#" class="v1_51">Sign Up</a>
+    <a href="signup.html" class="v1_51">Sign Up</a>
     <div class="name">
 
     </div>
