--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -217,7 +217,7 @@
 <body>
     <div class="v10_1051">
         <div class="nav">
-            <a href="rank.html" v10_1053">GitRank</a>
+            <a href="rank.html" class="v10_1053">GitRank</a>
             <a href="myprofile.html" class="v10_1054">My profile</a>
             <a href="signin.html" class="v10_1055">Sign out</a>
         </div>
