button to checkbox

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -72,62 +72,83 @@
         <div class="container rounded-2 p-2" style="border:3px solid orange;">
             <div class="row g-3 align-items-center" id="interests_wrapper">
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Frontend</button>
+                    <input type="checkbox" class="btn-check" id="frontend" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5"
+                        for="frontend">Frontend</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Backend</button>
+                    <input type="checkbox" class="btn-check" id="backend" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="backend">Backend</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">AI</button>
+                    <input type="checkbox" class="btn-check" id="ai" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="ai">AI</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Database</button>
+                    <input type="checkbox" class="btn-check" id="database" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5"
+                        for="database">Database</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">NPL</button>
+                    <input type="checkbox" class="btn-check" id="npl" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="npl">NPL</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Machine
-                        learning</button>
+                    <input type="checkbox" class="btn-check" id="machine" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="machine">Machine
+                        learing</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Neural
-                        network</button>
+                    <input type="checkbox" class="btn-check" id="neural" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="neural">Neural
+                        network</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Algorithm</button>
+                    <input type="checkbox" class="btn-check" id="algorithm" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5"
+                        for="algorithm">Algorithm</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Data
-                        mining</button>
+                    <input type="checkbox" class="btn-check" id="mining" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="mining">Data
+                        mining</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Security</button>
+                    <input type="checkbox" class="btn-check" id="security" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5"
+                        for="security">Security</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Embedded
-                        system</button>
+                    <input type="checkbox" class="btn-check" id="embeded" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="embeded">Embeded
+                        System</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Mobile
-                        application</button>
+                    <input type="checkbox" class="btn-check" id="mobile" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="mobile">Mobile
+                        application</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Web
-                        programming</button>
+                    <input type="checkbox" class="btn-check" id="web" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="web">Web
+                        programming</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">VR</button>
+                    <input type="checkbox" class="btn-check" id="vr" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="vr">VR</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">AR</button>
+                    <input type="checkbox" class="btn-check" id="ar" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="ar">AR</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Network</button>
+                    <input type="checkbox" class="btn-check" id="network" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="network">Network</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Reverse
-                        engineering</button>
+                    <input type="checkbox" class="btn-check" id="reverse" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="reverse">Reverse
+                        engineering</label><br>
                 </div>
             </div>
         </div>
@@ -135,37 +156,48 @@
         <div class="container rounded-2 p-2" style="border:3px solid orange;">
             <div class="row g-3 align-items-center" id="language_wrapper">
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Python</button>
+                    <input type="checkbox" class="btn-check" id="python" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="python">Python</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Java</button>
+                    <input type="checkbox" class="btn-check" id="java" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="java">Java</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">JavaScript</button>
+                    <input type="checkbox" class="btn-check" id="js" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="js">JavaScript</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">C++</button>
+                    <input type="checkbox" class="btn-check" id="cpp" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="cpp">C++</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">PHP</button>
+                    <input type="checkbox" class="btn-check" id="php" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="php">PHP</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">TypeScript</button>
+                    <input type="checkbox" class="btn-check" id="ts" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="ts">TypeScript</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">C</button>
+                    <input type="checkbox" class="btn-check" id="c" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="c">C</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Go</button>
+                    <input type="checkbox" class="btn-check" id="go" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="go">Go</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Shell</button>
+                    <input type="checkbox" class="btn-check" id="shell" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="shell">Shell</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">Ruby</button>
+                    <input type="checkbox" class="btn-check" id="ruby" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="ruby">Ruby</label><br>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-outline-primary ms-1 text-nowrap rounded-5">C#</button>
+                    <input type="checkbox" class="btn-check" id="c#" autocomplete="off">
+                    <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="c#">C#</label><br>
                 </div>
             </div>
         </div>
