--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -200,13 +200,11 @@
     <div class="v1_38">
       <img class="img" src="image/github.png">
     </div>
-    <form>
 
-      <input type="text" class="v1_39" id="user_id" name="id">
-      <input type="password" class="v1_40" id="user_pw" name="pw">
-      <button type="submit" class="v1_43" id="login">LOG IN</button>
+    <input type="text" class="v1_39" id="user_id" name="id">
+    <input type="password" class="v1_40" id="user_pw" name="pw">
+    <button type="button" class="v1_43" id="btn_login">LOG IN</button>
 
-    </form>
     <span class="v1_44">ID : </span>
     <span class="v1_45">PW :</span>
     <span class="v1_49">GitRank</span>
@@ -216,6 +214,7 @@
 
     </div>
   </div>
+  <script src="signin.js"></script>
 </body>
 
 </html>
