--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -99,7 +99,7 @@
                     <div class="col-auto">
                         <input type="checkbox" class="btn-check" id="itr_machine" autocomplete="off">
                         <label class="btn btn-outline-primary ms-1 text-nowrap rounded-5" for="itr_machine">Machine
-                            learing</label><br>
+                            learning</label><br>
                     </div>
                     <div class="col-auto">
                         <input type="checkbox" class="btn-check" id="itr_neural" autocomplete="off">
@@ -213,14 +213,14 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" id="btn_signup" class="btn btn-primary ms-1 text-nowrap rounded-2 mt-3 mb-3">SIGN
+            <button type="button" id="btn_signup" class="btn btn-primary ms-1 text-nowrap rounded-2 mt-3 mb-3">SIGN
                 UP</button>
 
         </form>
     </div>
 
 
-
+    <script src="signup.js"></script>
 </body>
 
 </html>
