--- a/frontend/edit.html
+++ b/frontend/edit.html
@@ -13,7 +13,7 @@
             <input type="text" class="v10_1332" id="my_contact" name="contact">
             <div class="name">
                 <a href="rank.html" class="v10_1290">GitRank</a>
-                <button type="submit" class="v10_1291" id="done" onclick="alert('Done')">Done</button>
+                <button type="button" class="v10_1291" id="btn_done">Done</button>
                 <a href="signin.html" class="v10_1292">Sign out</a>
             </div>
 
@@ -51,6 +51,7 @@
             </button>
         </form>
     </div>
+    <script src="edit.js"></script>
 </body>
 
 </html> <br /><br />
