--- a/frontend/myprofile.html
+++ b/frontend/myprofile.html
@@ -76,7 +76,6 @@
         .v10_1265 {
             width: 960px;
             height: 300px;
-            background: url("../images/v10_1265.png");
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
@@ -264,6 +263,7 @@
             <span class="v10_1269">Github contribution </span>
         </div>
     </div>
+    <script src="myprofile.js"></script>
 </body>
 
 </html>
