signin.html objects id fixed

--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,7 @@
                 <label class="col-form-label"><i class="bi bi-person" style="font-size:24px"></i></label>
             </div>
             <div class="col-auto">
-                <input type="text" class="form-control" id="signup_id" placeholder="ID"
+                <input type="text" class="form-control" id="signin_id" placeholder="ID"
                     style="border:2px solid orange; width:400px">
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <label class="col-form-label"><i class="bi bi-lock" style="font-size:24px;"></i></label>
             </div>
             <div class="col-auto">
-                <input type="password" class="form-control" id="signup_pw" placeholder="Password"
+                <input type="password" class="form-control" id="signin_pw" placeholder="Password"
                     style="border:2px solid orange; width:400px">
             </div>
         </div>
