object id fixed

--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,7 @@
                 <label class="col-form-label"><i class="bi bi-person" style="font-size:24px"></i></label>
             </div>
             <div class="col-auto">
-                <input type="text" class="form-control" id="signin_id" placeholder="ID"
+                <input type="text" class="form-control" id="user_id" placeholder="ID"
                     style="border:2px solid orange; width:400px">
             </div>
         </div>
@@ -43,11 +43,11 @@
                 <label class="col-form-label"><i class="bi bi-lock" style="font-size:24px;"></i></label>
             </div>
             <div class="col-auto">
-                <input type="password" class="form-control" id="signin_pw" placeholder="Password"
+                <input type="password" class="form-control" id="user_pw" placeholder="Password"
                     style="border:2px solid orange; width:400px">
             </div>
         </div>
-        <button type="button" id="btn_signup" class="btn btn-primary ms-1 text-nowrap rounded-2 mt-3 mb-3">SIGN
+        <button type="button" id="btn_login" class="btn btn-primary ms-1 text-nowrap rounded-2 mt-3 mb-3">SIGN
             IN</button>
 
     </div>
