--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -1,219 +1,58 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GitRank : SignIn</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-size: 14px;
-    }
-
-    .v1_4 {
-      width: 100%;
-      height: 1024px;
-      background: rgba(255, 255, 255, 1);
-      opacity: 1;
-      position: relative;
-      top: 0px;
-      left: 0px;
-      overflow: hidden;
-    }
-
-    .v1_38 {
+    .container {
       width: 500px;
-      height: 350px;
-      background: rgba(217, 217, 217, 1);
-      opacity: 1;
-      position: absolute;
-      top: 127px;
-      left: 470px;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      overflow: hidden;
-    }
-
-    .v1_39 {
-      width: 500px;
-      height: 60px;
-      background: rgba(255, 255, 255, 1);
-      opacity: 1;
-      position: absolute;
-      top: 533px;
-      left: 470px;
-      border: 3px solid rgba(255, 140, 0, 1);
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      overflow: hidden;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 20px;
-      text-align: left;
-      padding-left: 60px;
-    }
-
-    .v1_40 {
-      width: 500px;
-      height: 60px;
-      background: rgba(255, 255, 255, 1);
-      opacity: 1;
-      position: absolute;
-      top: 618px;
-      left: 470px;
-      border: 3px solid rgba(255, 140, 0, 1);
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      overflow: hidden;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 20px;
-      text-align: left;
-      padding-left: 70px;
-    }
-
-    .v1_43 {
-      width: 200px;
-      height: 60px;
-      background: rgba(255, 170, 0, 1);
-      opacity: 1;
-      position: absolute;
-      top: 734px;
-      left: 620px;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      overflow: hidden;
-    }
-
-    .v1_44 {
-      width: 31px;
-      color: rgba(0, 0, 0, 1);
-      position: absolute;
-      top: 551px;
-      left: 494px;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 20px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .v1_45 {
-      width: 43px;
-      color: rgba(0, 0, 0, 1);
-      position: absolute;
-      top: 636px;
-      left: 494px;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 20px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .v1_48 {
-      width: 89px;
-      color: rgba(0, 0, 0, 1);
-      position: absolute;
-      top: 749px;
-      left: 671px;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 24px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .v1_49 {
-      width: 157px;
-      color: rgba(0, 0, 0, 1);
-      position: absolute;
-      top: 46px;
-      left: 641px;
-      font-family: Inter;
-      font-weight: Bold;
-      font-size: 40px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .v1_50 {
-      width: 155px;
-      color: rgba(0, 0, 0, 1);
-      position: absolute;
-      top: 863px;
-      left: 610px;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 14px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .v1_51 {
-      width: 52px;
-      color: rgba(51, 102, 187, 1);
-      position: absolute;
-      top: 863px;
-      left: 777px;
-      font-family: Inter;
-      font-weight: Regular;
-      font-size: 14px;
-      opacity: 1;
-      text-align: left;
-    }
-
-    .name {
-      color: #fff;
-    }
-
-    .img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 500px;
-      height: 350px;
-
     }
   </style>
-
-
 
 </head>
 
 <body>
-  <div class="v1_4">
-    <div class="v1_38">
-      <img class="img" src="image/github.png">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
+  <div class="container" style="text-align: center;">
+    <h1 class="mt-3"><strong>SIGN IN</strong></h1>
+    <h6>Don't have an account? <a href="./signup.html">Sign Up</a></h6>
+    <img alt="Github Logo" width="500" style="border:3px solid orange" class="rounded-3 mt-3"
+      data-src="https://csharpcorner-mindcrackerinc.netdna-ssl.com/article/what-is-git-github-and-github-desktop-and-create-a-git-repository-in-github-usi/Images/github.png"
+      src="https://csharpcorner-mindcrackerinc.netdna-ssl.com/article/what-is-git-github-and-github-desktop-and-create-a-git-repository-in-github-usi/Images/github.png">
+
+    <div class="row g-3 align-items-center mt-3">
+      <div class="col-auto">
+        <label class="col-form-label"><i class="bi bi-person" style="font-size:24px"></i></label>
+      </div>
+      <div class="col-auto">
+        <input type="text" class="form-control" id="user_id" placeholder="ID"
+          style="border:2px solid orange; width:400px">
+      </div>
     </div>
-
-    <input type="text" class="v1_39" id="user_id" name="id">
-    <input type="password" class="v1_40" id="user_pw" name="pw">
-    <button type="button" class="v1_43" id="btn_login">LOG IN</button>
-
-    <span class="v1_44">ID : </span>
-    <span class="v1_45">PW :</span>
-    <span class="v1_49">GitRank</span>
-    <span class="v1_50">Don’t have an account?</span>
-    <a href="signup.html" class="v1_51">Sign Up</a>
-    <div class="name">
-
+    <div class="row g-3 align-items-center">
+      <div class="col-auto">
+        <label class="col-form-label"><i class="bi bi-lock" style="font-size:24px;"></i></label>
+      </div>
+      <div class="col-auto">
+        <input type="password" class="form-control" id="user_pw" placeholder="Password"
+          style="border:2px solid orange; width:400px">
+      </div>
     </div>
+    <button type="button" id="btn_login" class="btn btn-primary ms-1 text-nowrap rounded-2 mt-3 mb-3">SIGN
+      IN</button>
+
   </div>
+
+
   <script src="signin.js"></script>
 </body>
 
