--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -264,6 +264,7 @@
             <span class="v10_1269">Github contribution </span>
         </div>
     </div>
+    <script src="profile.js"></script>
 </body>
 
 </html>
