--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -23,7 +23,7 @@
     crossorigin="anonymous"></script>
 
   <div class="container" style="text-align: center;">
-    <h1 class="mt-3"><strong>SIGN IN</strong></h1>
+    <h1 class="mt-3"><strong>GitRank</strong></h1>
     <h6>Don't have an account? <a href="./signup.html">Sign Up</a></h6>
     <img alt="Github Logo" width="500" style="border:3px solid orange" class="rounded-3 mt-3"
       data-src="https://csharpcorner-mindcrackerinc.netdna-ssl.com/article/what-is-git-github-and-github-desktop-and-create-a-git-repository-in-github-usi/Images/github.png"
