--- a/frontend/rank.html
+++ b/frontend/rank.html
@@ -34,14 +34,15 @@
         <div class="row g-3 align-items-center mt-3">
             <div class="col-auto">
                 <div id="btn_searchby" class="btn-group">
-                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Search by
+                    <button type="button" class="btn btn-primary" id="search_item">ID</button>
+                    <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item">One</a></li>
-                        <li><a class="dropdown-item">Two</a></li>
-                        <li><a class="dropdown-item">Three</a></li>
+                        <li><button class="dropdown-item" id="ID" type="button">ID</button></li>
+                        <li><button class="dropdown-item" id="INTERESTS" type="button">Interests</button></li>
+                        <li><button class="dropdown-item" id="SKILLS" type="button">Skills</button></li>
                     </ul>
                 </div>
             </div>
