design edit.html & profile contribution design

--- a/myprofile.html
+++ b/myprofile.html
@@ -69,9 +69,8 @@
                 <div class="col-8" style="text-align:left;"><span id="user_rank">TestRank</span></div>
             </div>
         </div>
-        <div class="rounded-2 mt-1 p-2 ps-3" style="border:3px solid orange; min-height:150px">
-            <span id="contribution">Example Data</span>
-        </div>
+        <img id="contribution" src="https://ghchart.rshah.org/e-" class="rounded-2 mt-1 p-2 ps-3"
+            style="border:3px solid orange; width:800px">
     </div>
 
 </body>
