--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,27 @@
         .container {
             width: 800px;
         }
+
+        #box {
+            position: relative;
+            width: 90%;
+        }
+
+        #box::after {
+            display: block;
+            content: "";
+            padding-bottom: 90%;
+        }
+
+        #my_img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
     </style>
 </head>
 
@@ -33,8 +54,9 @@
     <div class="container">
         <div class="row">
             <div class="col-4 mt-4" style="text-align:center;">
-                <img id="my_img" src="./frontend/image/github.png" width="200" height="200"
-                    class="rounded-3 mt-2 mb-3"><br>
+                <div id="box" class="mt-3 mb-3">
+                    <img id="my_img" src="./frontend/image/github.png" class="rounded-3"><br>
+                </div>
                 <span id="user_id" style="font-weight:bold; font-size:1.3rem">TestID</span>
             </div>
             <div class="col-8 mt-3">
