--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -1,270 +1,104 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>GitRank-Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            font-size: 14px;
-        }
-
-        .v10_1051 {
-            width: 100%;
-            height: 1024px;
-            background: rgba(255, 255, 255, 1);
-            opacity: 1;
-            position: relative;
-            top: 0px;
-            left: 0px;
-            overflow: hidden;
-        }
-
-        .nav {
-            color: #fff;
-        }
-
-        .v10_1053 {
-            width: 157px;
-            color: rgba(0, 0, 0, 1);
-            position: absolute;
-            top: 28px;
-            left: 126px;
-            font-family: Inter;
-            font-weight: Bold;
-            font-size: 40px;
-            opacity: 1;
-            text-align: left;
-            text-decoration: none;
-        }
-
-        .v10_1054 {
-            width: 151px;
-            color: rgba(0, 0, 0, 1);
-            position: absolute;
-            top: 33px;
-            left: 994px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 32px;
-            opacity: 1;
-            text-align: left;
-            text-decoration: none;
-        }
-
-        .v10_1055 {
-            width: 125px;
-            color: rgba(0, 0, 0, 1);
-            position: absolute;
-            top: 33px;
-            left: 1195px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 32px;
-            opacity: 1;
-            text-align: left;
-            text-decoration: none;
-        }
-
-        .name {
-            color: #fff;
-        }
-
-        .v10_1265 {
-            width: 960px;
-            height: 300px;
-            background: url("../images/v10_1265.png");
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;
-            opacity: 1;
-            position: absolute;
-            top: 620px;
-            left: 205px;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-            overflow: hidden;
-        }
-
-        .v10_1264 {
-            width: 450px;
-            height: 60px;
-            background: rgba(255, 255, 255, 1);
-            opacity: 1;
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            border: 3px solid rgba(255, 140, 0, 1);
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-            overflow: hidden;
-        }
-
-        .v10_1268 {
-            width: 927px;
-            height: 180px;
-            background: rgba(255, 255, 255, 1);
-            opacity: 1;
-            position: absolute;
-            top: 90px;
-            left: 20px;
-            border: 3px solid rgba(255, 140, 0, 1);
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-            overflow: hidden;
-        }
-
-        .v10_1266 {
-            width: 158px;
-            color: rgba(0, 0, 0, 1);
-            position: absolute;
-            top: 35px;
-            left: 49px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 24px;
-            opacity: 1;
-            text-align: left;
-        }
-
-        .v10_1267 {
-            width: 115px;
-            color: rgba(12, 65, 255, 1);
-            position: absolute;
-            top: 35px;
-            left: 245px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 24px;
-            opacity: 1;
-            text-align: left;
-        }
-
-        .v10_1269 {
-            width: 220px;
-            color: rgba(0, 0, 0, 1);
-            position: absolute;
-            top: 109px;
-            left: 49px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 24px;
-            opacity: 1;
-            text-align: left;
-        }
-
-        #contribution {
-            position: absolute;
-            top: 50px;
-            left: 35px;
-
-        }
-
         .container {
-            position: absolute;
-            top: 138px;
-            left: 145px;
-            width: 1150px;
-            height: 450px;
+            width: 800px;
         }
 
-        .image {
-            position: absolute;
-            top: 56.25px;
-            left: 57.5px;
-            width: 345px;
-            height: 337.5px;
-            border-radius: 20px;
+        #box {
+            position: relative;
+            width: 90%;
         }
 
-        .img {
+        #box::after {
+            display: block;
+            content: "";
+            padding-bottom: 90%;
+        }
+
+        #my_img {
             position: absolute;
             top: 0;
             left: 0;
-            width: 345px;
-            height: 337px;
-
-        }
-
-        .data {
-            position: absolute;
-            left: 460px;
-            width: 575px;
-            height: 450px;
-            display: flex;
-            padding-top: 30px;
-            flex-direction: column;
-        }
-
-        .data p {
-            margin: 10px;
-            font-family: Inter;
-            font-weight: Regular;
-            font-size: 18px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
         }
     </style>
 </head>
 
 <body>
-    <div class="v10_1051">
-        <div class="nav">
-            <a href="rank.html" class="v10_1053">GitRank</a>
-            <a href="myprofile.html" class="v10_1054">My profile</a>
-            <a href="signin.html" class="v10_1055">Sign out</a>
-        </div>
-        <div class="container">
-            <div class="image">
-                <img src="image/github.png" class="img" id="user_img">
-            </div>
-            <div class="data">
-                <table>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Github :</p>
-                        </td>
-                        <td><span id="user_github">github.com</span></td>
-                    </tr>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Interests :</p>
-                        </td>
-                        <td><span id="user_interests">backend</span></td>
-                    </tr>
-                    <tr>
-                        <td style="width:120px">
-                            <p>Contact :</p>
-                        </td>
-                        <td><span id="user_contact">test@gmail.com</span></td>
-                    </tr>
-                </table>
-                <fieldset style="height: 225px">
-                    <legend style="font-size:18px; font-family: Inter;">Comment</legend>
-                    <span id="user_comment">I wanna be a good developer!</span>
-                </fieldset>
-            </div>
-        </div>
-        <div class="v10_1265">
-            <div class="v10_1264">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
-            </div>
-            <div class="v10_1268">
-                <span id="contribution" style="font-size:15px">frontend</span>
-            </div>
-            <span class="v10_1266">Rating Score :</span>
-            <span class="v10_1267" id="user_rank">Diamond !</span>
-            <span class="v10_1269">Github contribution </span>
+    <nav class="navbar bg-light mb-4">
+        <div class="container">
+            <a class="navbar-brand" style="font-weight:bold; font-size:1.5rem" href="./rank.html">GitRank</a>
+            <form class="d-flex">
+                <a class="nav-link me-2" href="./myprofile.html">My profile</a>
+                <a class="nav-link ms-2" href="./signin.html">Sign Out</a>
+            </form>
         </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4 mt-4" style="text-align:center;">
+                <div id="box" class="mt-3 mb-3">
+                    <img id="my_img" src="./image/github.png" class="rounded-3"><br>
+                </div>
+                <span id="user_id" style="font-weight:bold; font-size:1.3rem">TestID</span>
+            </div>
+            <div class="col-8 mt-3">
+                <div class="row mb-3">
+                    <div class="col-3" style="font-weight:bold;">
+                        <p><span>Github </span></p>
+                        <p><span>Interests </span></p>
+                        <p><span>Skills </span></p>
+                        <p><span>Contact </span></p>
+                    </div>
+                    <div class="col-9">
+                        <p><span id="user_github">github</span></p>
+                        <p><span id="user_interests">frontend, backend</span></p>
+                        <p><span id="user_skills">JavaScript, C, Python</span></p>
+                        <p><a href="" id="user_contact">test@gmail.com</a></p>
+                    </div>
+                </div>
+                <strong>Comment</strong>
+                <form>
+                    <div class="form-group mt-1">
+                        <textarea class="form-control" id="user_comment" rows="5"
+                            style="font-size:0.8em; text-align:left" disabled>Example</textarea>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+
+        <div class="rounded-2 mt-5 p-2 ps-3" style="border:3px solid orange; width:400px">
+            <div class="row">
+                <div class="col-4" style="text-align:left; font-weight: bold;">Rating Score </div>
+                <div class="col-8" style="text-align:left;"><span id="user_rank">TestRank</span></div>
+            </div>
+        </div>
+
+        <img id="contribution" src="https://ghchart.rshah.org/e-" class="rounded-2 mt-1 p-2 ps-3"
+            style="border:3px solid orange; width:800px">
+
+
+
     </div>
-    <script src="profile.js"></script>
+    <script src="./profile.js"></script>
 </body>
 
 </html>
