--- a/profile.html
+++ b/profile.html
@@ -60,17 +60,37 @@
                 <span id="user_id" style="font-weight:bold; font-size:1.3rem">TestID</span>
             </div>
             <div class="col-8 mt-3">
-                <div class="row mb-3">
+                <div class="row">
                     <div class="col-3" style="font-weight:bold; border-right: 3px solid orange">
                         <p><span>Github :</span></p>
-                        <p><span>Interests :</span></p>
-                        <p><span>Skills :</span></p>
-                        <p><span>Contact :</span></p>
                     </div>
                     <div class="col-9">
                         <p><span id="user_github">github</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3" style="font-weight:bold; border-right: 3px solid orange">
+                        <p><span>Interests :</span></p>
+                    </div>
+                    <div class="col-9">
                         <p><span id="user_interests">frontend, backend</span></p>
-                        <p><span id="user_skills">JavaScript, C, Python</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3" style="font-weight:bold; border-right: 3px solid orange">
+                        <p><span>Skills :</span></p>
+                    </div>
+                    <div class="col-9">
+                        <p><span id="user_skills">JavaScript, C,
+                                Python, C++, Ruby, C#, Java, Assembly</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-3" style="font-weight:bold; border-right: 3px solid orange">
+                        <p><span>Contact :</span></p>
+                    </div>
+                    <div class="col-9">
                         <p><span id="user_contact">test@gmail.com</span></p>
                     </div>
                 </div>
