--- a/frontend/myprofile.html
+++ b/frontend/myprofile.html
@@ -60,18 +60,36 @@
                 <span id="user_id" style="font-weight:bold; font-size:1.3rem">TestID</span>
             </div>
             <div class="col-8 mt-3">
-                <div class="row mb-3">
+                <div class="row">
                     <div class="col-3" style="font-weight:bold;">
                         <p><span>Github </span></p>
-                        <p><span>Interests </span></p>
-                        <p><span>Skills </span></p>
-                        <p><span>Contact </span></p>
                     </div>
                     <div class="col-9">
                         <p><span id="user_github">github</span></p>
-                        <p><span id="user_interests">frontend, backend</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3" style="font-weight:bold;">
+                        <p><span>Interests </span></p>
+                    </div>
+                    <div class="col-9">
+                        <p><span id="user_interests">frontend, backend, Machine Learning, VR, AR, Algorithm</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3" style="font-weight:bold;">
+                        <p><span>Skills </span></p>
+                    </div>
+                    <div class="col-9">
                         <p><span id="user_skills">JavaScript, C, Python</span></p>
-                        <p><a href="" id="user_contact">test@gmail.com</a></p>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-3" style="font-weight:bold;">
+                        <p><span>Contact </span></p>
+                    </div>
+                    <div class="col-9">
+                        <p><span id="user_contact">test@gmail.com</span></p>
                     </div>
                 </div>
                 <strong>Comment</strong>
@@ -84,7 +102,6 @@
             </div>
 
         </div>
-
         <div class="rounded-2 mt-5 p-2 ps-3" style="border:3px solid orange; width:400px">
             <div class="row">
                 <div class="col-4" style="text-align:left; font-weight: bold;">Rating Score</div>
