--- a/myprofile.html
+++ b/myprofile.html
@@ -104,9 +104,11 @@
         </div>
 
         <div class="rounded-2 mt-5 p-2 ps-3" style="border:3px solid orange; width:400px">
-            <div class="row">
+            <div class="row ">
                 <div class="col-4" style="text-align:left;">Rating Score :</div>
-                <div class="col-8" style="text-align:left;"><span id="user_rank">TestRank</span></div>
+                <div class="col-4" style="text-align:left;"><span id="user_rank">TestRank</span></div>
+                <div class="col-4" style="text-align:right;"><button id="refresh" class="btn btn-warning btn-sm"
+                        type="submit">Refresh</button></div>
             </div>
         </div>
         <img id="contribution" src="https://ghchart.rshah.org/e-" class="rounded-2 mt-1 p-2 ps-3"
