--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -33,6 +33,11 @@
             object-fit: cover;
             border-radius: 50%;
         }
+
+        #user_github {
+            text-decoration: none;
+            color: black;
+        }
     </style>
 </head>
 
@@ -65,7 +70,7 @@
                         <p><span>Github </span></p>
                     </div>
                     <div class="col-9">
-                        <p><span id="user_github">github</span></p>
+                        <p><a href="" id="user_github">github</a></p>
                     </div>
                 </div>
                 <div class="row">
@@ -91,7 +96,7 @@
                         <p><span>Contact </span></p>
                     </div>
                     <div class="col-9">
-                        <p><span id="user_contact">test@gmail.com</span></p>
+                        <p><a href="" id="user_contact">test@gmail.com</a></p>
                     </div>
                 </div>
                 <strong>Comment</strong>
